# Strandbeest-inverse-design

./: .gitignore  README.md  pyproject.toml  requirements.txt
runs/default/: config.json
scripts/: generate_reference_assets.py  run_full_pipeline.py
src/strandbeest/: __init__.py  baselines.py  config.py  data.py  evaluation.py  kinematics.py  models.py  pipeline.py  plots.py  reference.py
tests/: test_kinematics_smoke.py
